--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   snippet_coder_utils: ^1.0.15
   animate_do: ^3.1.2
   bloc: ^8.1.0
+  curved_navigation_bar: ^1.0.3
 dev_dependencies:
   flutter_test:
     sdk: flutter
