--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   bloc: ^8.1.0
   curved_navigation_bar: ^1.0.3
   intl: ^0.17.0
+  carousel_slider: ^4.0.0
   
 
 dev_dependencies:
